[package]
name = "webalert"
version = "0.1.0"
authors = ["Mikkel Kroman <mk@maero.dk>"]
edition = "2018"
description = "Monitor websites and receive notifications when they change"
license = "MIT OR Apache-2.0"
keywords = ["web", "notification"]
repository = "https://github.com/mkroman/webalert"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "webalert"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "2.33"
prost = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5", default-features = false, features = [ "macros", "postgres", "chrono", "runtime-tokio-native-tls" ] }
structopt = "0.3"
tonic = "0.5"
tonic-reflection = "0.2"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.1", features = ["trace", "sensitive-headers"] }
tracing = "0.1"
tracing-subscriber = "0.2"
http = "0.2"
warp = "0.3"
futures = "0.3"

[build-dependencies]
tonic-build = "0.5"

[profile.release]
codegen-units = 1
lto = "fat"
