[package]
name = "webalert-runner"
version = "0.1.0"
edition = "2018"

[dependencies]
thiserror = "1"
tonic = "0.5"
tokio = { version = "1", features = ["full"] }
caps = "0.5"
tracing = "0.1"
color-eyre = "0.5"
tracing-error = "0.1"
tracing-subscriber = "0.2"
prost = "0.8"
prost-types = "0.8"
structopt = "0.3"
thirtyfour = "0.26"
http = "0.2"
tower = "0.4"
hostname = "0.3"

[build-dependencies]
tonic-build = "0.5"
